--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="김순영" 포트폴리오">
 	<meta name="keywords" content="디자인, 기획">
-	<link rel="stylesheet" href="C:/Users/user/Desktop/style.css">
+	<link rel="stylesheet" href="style.css">
     <style>
       #snowflakeContainer {
         position: absolute;
