--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by 김순영 </a>
   </p></div>
 	</div>
+    <div id="snowflakeContainer">
+      <span class="snowflake"></span>
+    </div>
 
 	</body>
 </html>
