--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </script>
 						     
 </head>
-<body style="background-color:midnightblue;">
+<body style="background:midnightblue;">
 	<!-- Main section start -->
 	<div class="main-site-warp">
 		<div class="site-menu-warp">
