--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 	<meta name="keywords" content="디자인, 기획">
 	<link rel="stylesheet" href="style.css">
     <style>
+h1 { color:white;
+}
+h2 { color:white;
+}
+h3 { color:white;
+}
+p { color:white;
+}
+li { color:white;
+}
+
       #snowflakeContainer {
         position: absolute;
         left: 0px;
@@ -131,7 +142,7 @@
     </script>
 						     
 </head>
-<body style="background:midnightblue;">
+<body style="background:black;">
 	<!-- Main section start -->
 	<div class="main-site-warp">
 		<div class="site-menu-warp">
