--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
 	<meta name="keywords" content="디자인, 기획">
 	<link rel="stylesheet" href="style.css">
     <style>
-h1 { color:white;
-}
-h2 { color:white;
-}
-h3 { color:white;
-}
-p { color:white;
-}
-li { color:white;
-}
 
       #snowflakeContainer {
         position: absolute;
@@ -142,7 +132,7 @@ li { color:white;
     </script>
 						     
 </head>
-<body style="background:black;">
+<body style="background:rgb(39, 88, 54);">
 	<!-- Main section start -->
 	<div class="main-site-warp">
 		<div class="site-menu-warp">
