--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </script>
 						     
 </head>
-<body style="background:rgb(39, 88, 54);">
+<body style="lightgrey;">
 	<!-- Main section start -->
 	<div class="main-site-warp">
 		<div class="site-menu-warp">
